deployments/kafka-manager/templates/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-manager
spec:
  gateways:
    - bied-gateway
  hosts:
    - "kafka.fontysbied.nl" # What inbound Host should be routed. (eg. 'research.bied.nl')
  http:
    - match:
        - uri:
            prefix: /
      route:
        # routes it toward this host. Usually a Kubernetes native 'Service', this should be a FQDN in production
        - destination:
            host: kafka-manager
            port:
              number: 9000
